--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -37,13 +37,8 @@
             </action>
         </group>
 
-        <action id="commontools.CodeGenerator" class="com.github.wangjin252.commontools.CodeGeneratorAction"
+        <action id="commontools.OldCodeGenerator" class="com.github.wangjin252.commontools.action.OldCodeGeneratorAction"
                 text="Generate Code" description="CodeGenerator">
-            <add-to-group group-id="ToolsMenu" anchor="last"/>
-        </action>
-
-        <action id="commontools.TestGUI" class="com.github.wangjin252.commontools.TestGUIAction" text="Test GUI"
-                description="Test GUI">
             <add-to-group group-id="ToolsMenu" anchor="last"/>
         </action>
 
